# rustwind

./: .gitignore  Cargo.toml  LICENSE  types.min.json
rustwind/: Cargo.toml  build.rs
rustwind-codegen/: Cargo.toml
rustwind-codegen/src/: lib.rs  types.rs  utils.rs
rustwind-macros/: Cargo.toml
rustwind-macros/src/: display.rs  lib.rs  parse.rs
rustwind/src/: lib.rs  states.rs
rustwind/tests/: build.rs  parse.rs
tailwind-fetcher/: main.py  models.py
tests/: build.rs  parse.rs
typewind/: Cargo.toml  accessibility.rs  backgrounds.rs  borders.rs  build.rs  effects.rs  filters.rs  flexbox_grid.rs  interactivity.rs  layout.rs  lib.rs  macros.rs  sizing.rs  spacing.rs  svg.rs  tables.rs  transforms.rs  transitions_animation.rs  typography.rs
typewind-gen/: main.py  models.py  requirements.txt  template.mako  utils.py
typewind-macros/: Cargo.toml
typewind-macros/src/: as_class.rs
typewind/src/: lib.rs
typewind/tests/: build.rs  parse.rs
