[package]
name = "rustwind"
version = "0.1.0"
edition = "2021"

[dependencies]
rustwind-macros = { path = "../rustwind-macros" }
const_format = { version = "0.2.34", features = ["fmt"] }
glob = "0.3.1"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "visit"] }

[dev-dependencies]
tempfile = "3.14.0"

[build-dependencies]
rustwind-codegen = { path = "../rustwind-codegen" }
prettyplease = "0.2.25"
